--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.4
+  font_awesome: ^5.10.1
 
 
   # The following adds the Cupertino Icons font to your application.
